<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InvisiMaze</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="player_one_image">Player 1 image</string>
    <string name="player_two_image">Player 2 image</string>
    <string name="dice_image">Dice image</string>
    <string name="Odd_number_warning">Number of rounds has to be odd</string>
    <string name="player_one_">Player one:</string>
    <string name="player_two_">Player two:</string>
    <string name="number_of_rounds_">Number of rounds:</string>
    <string name="difficulty_">Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

</resources>
