<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingsName"
        android:layout_marginLeft="10dp"
        android:background="@drawable/menuimage"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textPlayerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_one_"
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/editPlayerOneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textColor="#FFF"
            android:background="#222"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"  
            android:singleLine="true" 
            android:ems="10" >

            <requestFocus />
        </EditText>
             
        <TextView
            android:id="@+id/textPlayerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_two_"
            
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/editPlayerTwoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:imeOptions="actionDone"
            android:singleLine="true" 
            android:inputType="textNoSuggestions"  
            android:textColor="#FFF"
            android:background="#222"
            android:ems="10" />

        <TextView
            android:id="@+id/TextViewNumberOfRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/number_of_rounds_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/numberOfRounds"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:ems="10"
            android:textColor="#FFF"
            android:background="#222"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:text="@string/difficulty_"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroupDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/easyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/easy"
                android:textColor="#FFF" />

            <RadioButton
                android:id="@+id/mediumRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="#FFF" />

            <RadioButton
                android:id="@+id/hardRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textColor="#FFF" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/settingsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

</RelativeLayout>