<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

	<TextView
	    android:id="@+id/rounds_left"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:gravity="center_horizontal"
	    android:textColor="#FFFFFF"
	    android:textSize="24sp"
	     />
    
	<GridView
	    android:id="@+id/gridview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/rounds_left"
	    android:columnWidth="90dp"
	    android:gravity="center"
	    android:horizontalSpacing="0dp"
	    android:numColumns="6"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="0dp" >
	</GridView>

	<LinearLayout
	    android:id="@+id/icons"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/gridview"
	    android:layout_marginTop="20dp"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:orientation="horizontal" 
	     >
	    
	    <LinearLayout 
	        android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:paddingLeft="16dp"
		    android:paddingRight="16dp"
		    android:orientation="vertical" 
	         >
	        
		    <ImageView
			    android:id="@+id/player1"
			    android:contentDescription="@string/player_one_image"
			    android:layout_width="120dp"
			    android:layout_height="0dip"
			    android:layout_margin="5dp"
				android:layout_weight="1"
			     />
		    
		    <TextView
		        android:id="@+id/player_one_score"
			    android:layout_width="90dp"
			    android:layout_height="40dp"
			    android:textColor="#FFFFFF"
			    android:textSize="24sp"
	    		 />
		    
	    </LinearLayout>
	    
	    <ImageView
		    android:id="@+id/dice"
		    android:contentDescription="@string/dice_image"
		    android:layout_width="0dip"
		    android:layout_height="60dp"
		    android:layout_margin="5dp"
		    android:layout_weight="1"
		    android:layout_gravity="center_vertical"
		     />
	    
	    <LinearLayout 
	        android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:paddingLeft="16dp"
		    android:paddingRight="16dp"
		    android:orientation="vertical" 
	         >
	        
		    <ImageView
			    android:id="@+id/player2"
			    android:contentDescription="@string/player_two_image"
			    android:layout_width="120dp"
			    android:layout_height="0dip"
			    android:layout_margin="5dp"
			    android:layout_weight="1"
			     />
		    
		    <TextView
		        android:id="@+id/player_two_score"
			    android:layout_width="90dp"
			    android:layout_height="40dp"
			    android:textColor="#FFFFFF"
			    android:textSize="24sp"
		         />
	    
	    </LinearLayout>
    
	</LinearLayout>
	
</RelativeLayout>